--- a/Doctor_GLM/chat.ipynb
+++ b/Doctor_GLM/chat.ipynb
@@ -94,7 +94,7 @@
    "source": [
     "\n",
     "history_list = []\n",
-    "history_list = chat(history_list, '请问高血压能吃党人参吗')"
+    "history_list = chat(history_list, '请问高血压能吃党参吗')"
    ]
   }
  ],
