--- a/Doctor_GLM/chat.ipynb
+++ b/Doctor_GLM/chat.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "ask = '请问高血压能吃党参吗'\n",
     "with torch.inference_mode():\n",
-    "    response, history = base_model.chat(tokenizer, ask, history=[],max_length=512)\n",
+    "    response, history = base_model.chat(tokenizer, ask, history=[],max_length=512, top_p=0.7, temperature=0.99)\n",
     "    print(ask)\n",
     "    print(response)\n"
    ]
