--- a/Doctor_GLM/chat.ipynb
+++ b/Doctor_GLM/chat.ipynb
@@ -11,27 +11,9 @@
     "from deep_training.nlp.models.chatglm import TransformerChatGlmLMHeadModel, setup_model_profile, ChatGLMConfig,ChatGLMForConditionalGeneration\n",
     "from deep_training.nlp.models.lora import LoraArguments, LoraModel\n",
     "from transformers import HfArgumentParser\n",
-    "\n",
+    "from models import MyTransformer\n",
     "from data_utils import train_info_args, NN_DataHelper\n",
     "from tokenization_chatglm import ChatGLMTokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyTransformer(TransformerChatGlmLMHeadModel, with_pl=True):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        lora_args: LoraArguments = kwargs.pop('lora_args')\n",
-    "        super(MyTransformer, self).__init__(*args, **kwargs)\n",
-    "        self.lora_args = lora_args\n",
-    "        if lora_args.with_lora:\n",
-    "            model = LoraModel(self.backbone, lora_args)\n",
-    "            print('*' * 30,'lora info')\n",
-    "            model.print_trainable_parameters()\n",
-    "            self.set_model(model, copy_attr=False)"
    ]
   },
   {
