Add repetition penalty to model language generatw

--- a/Doctor_GLM/chat_quant.ipynb
+++ b/Doctor_GLM/chat_quant.ipynb
@@ -19,7 +19,8 @@
     "response, history = model.chat(tokenizer,\n",
     "                               \"我爷爷高血压可以喝咖啡吗\",\n",
     "                               history=[],\n",
-    "                               max_length=2048)\n",
+    "                               max_length=2048,\n",
+    "                               repetition_penalty=10.0)\n",
     "print(response)\n"
    ]
   }
