Update the gradio demo

--- a/Doctor_GLM/chat_quant.ipynb
+++ b/Doctor_GLM/chat_quant.ipynb
@@ -26,10 +26,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.8 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.8"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "eaeac412cb94074bb77ccb7d42ca21d1d210903378c2fcd94db5ea1fbda226dc"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
